Specify some settings in C++ rather than game_settings.cfg

--- a/game/game_settings.cfg
+++ b/game/game_settings.cfg
@@ -39,17 +39,23 @@ Set g_camWeightX "1.0000"
 Set g_camWeightY "3.0000"
 Set g_camYaw "0.0000"
 Set g_corpseTime "10000"
-Set g_creepFormationIndexes "0,31,65,87,97,115"
-Set g_creepMaxUpgrades "30"
-Set g_creepMeleeCount "3,4,5,5,6,7"
-Set g_creepRangedCount "1,1,1,2,2,2"
-Set g_creepSiegeCount "1,1,1,2,2,2"
-Set g_creepSiegeInterval "5"
-Set g_creepUpgradeInterval "420000"
-Set g_creepWaveInterval "30000"
-Set g_critterNoRespawnProximity "500.0000"
+
+// https://dota2.fandom.com/wiki/Lane_Creeps
+// Set g_creepFormationIndexes "0,31,61,71,81,91"
+// Set g_creepMaxUpgrades "30"
+// Set g_creepMeleeCount "3,4,5,5,5,6"
+// Set g_creepRangedCount "1,1,1,1,2,2"
+// Set g_creepSiegeCount "1,1,1,2,2,2"
+// Set g_creepSiegeInterval "10"
+// Set g_creepUpgradeInterval "450000"
+// Set g_creepWaveInterval "30000"
+
+// Set g_critterNoRespawnProximity "500.0000"
 Set g_critters "Critter_Chiprel,Critter_Rat,Critter_Lizard,Critter_Squeye"
-Set g_critterSpawnInterval "120000"
+
+// https://dota2.fandom.com/wiki/Neutral_creeps#Spawning
+// Set g_critterSpawnInterval "60000"
+
 Set g_damageLinkAmount "0.9000"
 Set g_dayLength "900000"
 Set g_dayStartTime "225000"
@@ -93,7 +99,10 @@ Set g_powerups "Powerup_Damage,Powerup_MoveSpeed,Powerup_Regen,Powerup_Stealth,P
 Set g_powerupSpawnInterval "120000"
 Set g_touchRange "64.0000"
 Set g_transferRange "64.0000"
-Set g_treeSpawnInterval "300000"
+
+// https://dota2.fandom.com/wiki/Trees#Respawn_Time
+// Set g_treeSpawnInterval "180000"
+
 Set g_unitActionAngle "90.0000"
 Set g_unitActionOnTurn "false"
 Set g_unitAggressionSightTime "3000"
@@ -114,8 +123,8 @@ Set g_unitSelectionIndicatorPath "/shared/materials/selection_indicator.material
 Set g_unitStealthFadeAmount "0.5000"
 Set g_voiceLaneChatRange "2000.0000"
 Set g_waypoint "Entity_Waypoint"
-Set hero_armorPerAgi "0.1700"
-Set hero_attackSpeedPerAgi "0.0100"
+// Set hero_armorPerAgi "0.1700"
+// Set hero_attackSpeedPerAgi "0.0100"
 Set hero_buyBackCost "150"
 Set hero_buyBackCostPerLevel "50"
 Set hero_goldBounty "200"
@@ -125,10 +134,10 @@ Set hero_goldBountyMinStreak "3"
 Set hero_goldBountyPerLevel "5"
 Set hero_goldBountyPerStreak "50"
 Set hero_goldLossPerLevel "30"
-Set hero_hpPerStr "22.0000"
-Set hero_hpRegenPerStr "0.1000"
-Set hero_mpPerInt "12.0000"
-Set hero_mpRegenPerInt "0.0500"
+// Set hero_hpPerStr "22.0000"
+// Set hero_hpRegenPerStr "0.1000"
+// Set hero_mpPerInt "12.0000"
+// Set hero_mpRegenPerInt "0.0500"
 Set hero_respawnTimePerLevel "4000"
 Set Prop_Dynamic_OcclusionRadius "0.0000"
 Set Prop_Scenery_OcclusionRadius "0.0000"
